--- a/index.html
+++ b/index.html
@@ -5,35 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <section class="calc">
         <div class="visor">
-            <div data-valores-salvos class="valores-salvos">123 +</div>
-            <div data-valores-digitados class="valores-digitados">456</div>
+            <div data-valores-salvos class="valores-salvos"></div>
+            <div data-valores-digitados class="valores-digitados"></div>
         </div>
 
         <button data-all-clear class="span-two">AC</button>
         <button data-delete>DEL</button>
-        <button data-operator class="operator">/</button>
-        <button data-number>1</button>
-        <button data-number>2</button>
-        <button data-number>3</button>
-        <button data-operator class="operator">*</button>
+        <button data-operator class="operator">&#247</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operator class="operator">X</button>
         <button data-number>4</button>
         <button data-number>5</button>
         <button data-number>6</button>
         <button data-operator class="operator">-</button>
-        <button data-number>7</button>
-        <button data-number>8</button>
-        <button data-number>9</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
         <button data-operator class="operator">+</button>
         <button data-number class="span-two">0</button>
         <button data-number>.</button>
-        <button data-equals class="operator">=</button>
+        <button data-equals class="operator equals">=</button>
 
     </section>
-    <script src="js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
